<resources>

    <string name="app_name">MiftahFajarA_1202154182_Modu1</string>
    <string name="judulUtama">Makan Malam</string>
    <string name="judul2">dengan Milea</string>
    <string name="button_eatbus">EATBUS</string>
    <string name="button_abnormal">ABNORMAL</string>
    <string name="menu_makan">Masukkan Menu Makanan</string>
    <string name="jumlah_porsi">Masukkan Jumlah Porsi</string>
    <string name="tempatMakan">Eatbus / Abnormal</string>
    <string name="menu2">Menu2</string>
    <string name="porsi2">Porsi2</string>
    <string name="harga2">Harga2</string>

</resources>
